Getting the names of the data modes (getDataModeNames) now computes
these from the plugins by querying them dynamically. The caller should
free the resulting array of strings, but not the strings themselves.
The return type of the routine no longer refers to a constant array.

Added CSV to the DataModeNames since the enums and this list were out of synch.
This should be removed very soon.

Changed the order of initialization so that default plugins (input
plugins) are done in ggobiInit() as is the initialization of the
session options (initSessionOptions).

Fixed the error in addVariableInternal which made all variables categorical.
Switch on the number of levels.

Moved from built-in data formats/modes to extensible plugins and a
uniform framework. Each plugin lists its set of supported mode names.
Implications for Rggobi.



Read Excel files directly via --datamode=excel and
ExcelReader plugin on Windows.

Support for reading CSV files (either using the CSV 
or the ExcelReader plugin.)


Input plugins can have multiple modeName tags within a modeNames tag.

Input plugin modeName used as the target for --datamode=<name>

"About plugins" display window separates the general and input plugins
into separate pages.

Select input plugin/mode from the File selection menu when opening a
file.


	
	

Added an item `New' to the File menu

Added an item  `About plugins' to the Help menu

Added the ability to read an initialization file
   -init, GGOBIRC, ~/.ggobirc

Added the plugin mechanism, registered in the initialization file.

Added a plugin for viewing data
  (See the Data menu beside the Help assuming the plugin is found.)